--- a/src/components/styles/LoginSignup.css
+++ b/src/components/styles/LoginSignup.css
@@ -3,7 +3,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('https://wallpapers.com/images/featured/4k-oaax18kaapkokaro.jpg') no-repeat center center fixed;
+    background: url('https://512pixels.net/downloads/macos-wallpapers-thumbs/10-14-Day-Thumb.jpg') no-repeat center center fixed;
     background-size: cover;
   }
   
