--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,39 @@
+.container {
+    margin: auto;
+  }
   
+  @media (min-width: 576px) {
+    .container {
+      width: 540px;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      width: 720px;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .container {
+      width: 940px;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .container {
+      width: 960px;
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .container {
+      width: 1140px;
+    }
+  }
+  
+  @media (min-width: 1400px) {
+    .container {
+      width: 1320px;
+    }
+  }
